syntax = "proto3";

package refs.v2;

option go_package = "github.com/nspcc-dev/neofs-api-go/refs/v2";
option csharp_namespace = "NeoFS.API.Refs";

// Address of object (container id + object id)
message Address {
  // container_id carries container identifier.
  ContainerID container_id = 1;
  // object_id carries object identifier.
  ObjectID object_id = 2;
}

// NeoFS object identifier.
message ObjectID {
  // value carries the object identifier in a binary format.
  bytes value = 1;
}

// NeoFS container identifier.
message ContainerID {
  // value carries the container identifier in a binary format.
  bytes value = 1;
}

// OwnerID group information about the owner of the NeoFS container.v2.
message OwnerID {
  // value carries the identifier of the container owner in a binary format.
  bytes value = 1;
}